--- a/src/main/resources/arcgisservers.properties
+++ b/src/main/resources/arcgisservers.properties
@@ -3,9 +3,11 @@
 # Here's an example
 # servers = dev
 # dev.url = http://myhost.com/
+# dev.tokenURL = https://myhost.com:6443/arcgis/tokens/generateToken
 # dev.username = user
 # dev.password = password
-# dev.tokenURL = 
+# dev.gisTierUsername=gisTierUsername
+# dev.gisTierPassword=gisTierPassword
 #
 # Once configured, you'll have an endpoint http://myproxyserver.com/proxy/<server>/<path> that will issue a request to
 # <server>/<path>.  From the example above visiting http://myproxyserver.com/proxy/dev/arcgis/rest/services will issue a
