Fix the sample  in the Comment.
The code  looks for serverName+".tokenUrl" and not serverName+".tokenURL"

--- a/src/main/resources/arcgisservers.properties
+++ b/src/main/resources/arcgisservers.properties
@@ -25,11 +25,11 @@
 # The servers property is a CSV list of entries
 # For each server, there should be an entry for url, username, and password
 # Here's an example
-# servers = dev
-# dev.url = http://myhost.com/
-# dev.tokenURL = https://myhost.com:6443/arcgis/tokens/generateToken
-# dev.username = user
-# dev.password = password
+# servers=dev
+# dev.url=http://myhost.com/
+# dev.tokenUrl=https://myhost.com:6443/arcgis/tokens/generateToken
+# dev.username=webTierUser
+# dev.password=webTierPassword
 # dev.gisTierUsername=gisTierUsername
 # dev.gisTierPassword=gisTierPassword
 #
